# sleipner-core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: sleipner-config.cmake.in
examples/: CMakeLists.txt
examples/sys/: error-lookup.cpp
examples/transport/: get-request.cpp
src/sleipner/net/: error.cpp  error.hpp  ip.cpp  ip.hpp
src/sleipner/sys/: error.cpp  error.hpp  winsock.cpp  winsock.hpp
src/sleipner/transport/: error.cpp  error.hpp  isocket.hpp  tcp.cpp  tcpclient.hpp
